<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/title_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="44dp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="center"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/subscribe_title"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="center"
        android:src="@drawable/ic_exit_red"
        app:layout_constraintBottom_toBottomOf="@id/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/url_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/please_input_subscribe_url"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <View
        android:id="@+id/url_input_area"
        android:layout_width="0dp"
        android:layout_height="156.5dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/url_input_area_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_input_title" />

    <EditText
        android:id="@+id/url_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/subscribe_url"
        android:textColor="@color/white"
        android:textColorHint="#86909C"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/url_input_area"
        app:layout_constraintEnd_toEndOf="@id/url_input_area"
        app:layout_constraintStart_toStartOf="@id/url_input_area"
        app:layout_constraintTop_toTopOf="@id/url_input_area" />

    <TextView
        android:id="@+id/url_input_paste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/paste"
        android:textColor="#4080FF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/url_input_area"
        app:layout_constraintEnd_toEndOf="@id/url_input_area" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_subscribe"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/subscribe_title"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_input_area"
        app:strokeColor="@color/white" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/layout_resolve_link"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="back, url_input_title, url_input_area, url_input, url_input_paste, start_subscribe" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/layout_subscribe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="preview, title, close" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:drawablePadding="20dp"
        android:text="@string/subscribe_error_by_network"
        android:textColor="#86909C"
        android:textSize="14sp"
        app:drawableTopCompat="@drawable/ic_error_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resume_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/resume_subscribe"
        android:textColor="@color/button_text_color"
        android:textSize="14sp"
        app:cornerRadius="25dp"
        app:icon="@drawable/ic_resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_message"
        app:strokeColor="@color/white" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/layout_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="error_message, resume_subscribe, title, close" />

    <LinearLayout
        android:id="@+id/resolve_link_progress"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:background="@drawable/toast_bg"
        android:paddingHorizontal="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/resolving_subscribe_url"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/toast"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/toast_bg"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_fail_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="拉流地址已失效" />

    <LinearLayout
        android:id="@+id/permission_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/round_rect_white_20"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_audio_permission_description_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_audio_permission_description_content"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>