<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- region TOP BAR-->
    <View
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/switch_camera"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="center"
        android:src="@drawable/ic_switch_camera"
        app:layout_constraintBottom_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="@id/top_bar"
        app:layout_constraintTop_toTopOf="@id/top_bar" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="center"
        android:src="@drawable/ic_exit_red"
        app:layout_constraintBottom_toBottomOf="@id/top_bar"
        app:layout_constraintEnd_toEndOf="@id/top_bar"
        app:layout_constraintTop_toTopOf="@id/top_bar" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/top_bar"
        app:layout_constraintEnd_toEndOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="@id/top_bar"
        app:layout_constraintTop_toTopOf="@id/top_bar"
        tools:text="ID: 9627" />
    <!-- endregion -->
    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_publish"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/start_publish"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/button_blue"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- region BOTTOM BAR -->
    <View
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/microphone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/microphone"
        android:textColor="#86909C"
        app:drawableTopCompat="@drawable/ic_mic"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toStartOf="@id/camera"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <TextView
        android:id="@+id/camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/camera"
        android:textColor="#86909C"
        app:drawableTopCompat="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/microphone"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <!-- endregion -->

    <TextView
        android:id="@+id/toast"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/toast_bg"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        tools:text="推流成功，可复制拉流地址"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>